<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">day30</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="day30_b1">二个Activity</string>
    <string name="day30_b2">各种隐式显示跳转</string>
    <string name="day30_b3">Intent携带数据</string>
    <string name="day30_b4">Activity生命周期</string>
    <string name="day30_b5">Activity启动模式</string>
    <string name="day30_b6">横竖屏切换生命周期</string>
    <string name="day30_b7">返回时传递数据</string>
    <string name="day30_b8"></string>
    
    
    <string name="intent_b1">隐式跳转到打电话</string>
    <string name="intent_b2">显示跳转到拨号器</string>
    <string name="intent_b3">隐式跳转到拨号器</string>
    <string name="intent_b4">隐式自定义action</string>
    <string name="intent_b5">filter多重配置匹配</string>
    <string name="intent_b6">data与type共同匹配</string>
    <string name="intent_b7">显示跳转浏览器</string>
    <string name="intent_b8">隐式跳转浏览器</string>
    <string name="b1_one">第一个Activity</string>
	<string name="b1_second">第二个Activity</string>
    <string name="b3_data1">putExtra传数据</string>
    <string name="b3_data2">Bundle封装传数据</string>
    <string name="data_boy">请输入男孩名字</string>
    <string name="data_girl">请输入女孩名字</string>
    <string name="data_text">姻缘计算器</string>
    <string name="data_submit">计算</string>
    <string name="b4_activityperiod">Activity生命周期</string>
    <string name="period_dialog">透明对话框</string>
    <string name="b5_mainactivity">主Activity界面</string>
    <string name="b5_oneactivity">第二个Activity界面</string>
    <string name="b6_contacts">添加联系人号码</string>
    <string name="b6_add">添加</string>
    <string name="b6_content">请输入短信内容</string>
    <string name="b6_send">发送</string>
	
</resources>
