<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/day30_b1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/day30_b1" />

    <Button
        android:id="@+id/day30_b2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/day30_b2" />

    <Button
        android:id="@+id/day30_b3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/day30_b3" />

    <Button
        android:id="@+id/day30_b4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/day30_b4" />

    <Button
        android:id="@+id/day30_b5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/day30_b5" />

    <Button
        android:id="@+id/day30_b6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/day30_b6" />

    <Button
        android:id="@+id/day30_b7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/day30_b7" />

    <Button
        android:id="@+id/day30_b8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/day30_b8" />

</LinearLayout>