<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/intent_b1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_b1" />

    <Button
        android:id="@+id/intent_b2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_b2" />

    <Button
        android:id="@+id/intent_b3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_b3" />

    <Button
        android:id="@+id/intent_b4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_b4" />

    <Button
        android:id="@+id/intent_b5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_b5" />

    <Button
        android:id="@+id/intent_b6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_b6" />

    <Button
        android:id="@+id/intent_b7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_b7" />

    <Button
        android:id="@+id/intent_b8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_b8" />

</LinearLayout>