<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/b6_contacts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/b6_contacts" />

        <Button
            android:id="@+id/b6_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b6_add" />
    </LinearLayout>

    <EditText
        android:id="@+id/b6_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/b6_content" />

    <Button
        android:id="@+id/b6_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/b6_send" />

</LinearLayout>